[package]
name = "plog"
version = "0.1.0"
authors = ["Dennis Bellinger (butitsnotme) <dennis.bellinger@gmail.com>"]
description = "A web based photo blog"
keywords = ["web", "photo", "blog"]
license = "MIT"
readme = "README.md"

[dependencies]
r2d2 = "^0.8.2"
r2d2_sqlite = "^0.5.0"
rocket = "^0.3.6"
rocket_codegen = "^0.3.6"
rusqlite = { version = "^0.13.0", features = ["bundled"] }
